Add Java 17 Lombok compatibility JVM arguments